# scPrinter

./: .gitignore  .pre-commit-config.yaml  .prettierignore  BMMCTutorial.ipynb  Footprint_TFBS_model_py_conv2.pt  README.md  TFBS_0_conv_v2.pt  TFBS_1_conv_v2.pt  ablation_binding.py  ablation_evaluation.py  backup_requirements.txt  backup_setup.py  evaluation_lora_model.py  evaluation_lora_model_v2.py  evaluation_model.py  finetune_TFBS.py  generate_TFBS_bigwig.py  harmonise.R  main.py  main_lora.py  main_lora_slice.py  parse_ablation.py  pyproject.toml  requirements.txt  setup.py  wandb_main.py  wandb_main_lora.py  wandb_main_lora_slice.py
bpnetfootprint/: Enformer_modules.py  Functions.py  Head_Modules.py  Modules.py  attribution_wrapper.py  attributions.py  captum_deeplift.py  chromBPNet_Modules.py  dataloader.py  enformer.py  evaluation.py  hyperparam.py  ism.py  negatives.py  shap_deeplift.py  utils.py
scprinter/: TFBS.py  __init__.py  buencolor.py  buencolors.py  chromvar.py  datasets.py  dorc.py  fetch.py  footprint.py  genome.py  getBias.py  getCounts.py  getFootprint.py  getTFBS.py  io.py  modelWrapper.py  motifs.py  peak.py  plotting.py  plotting_seq.py  preprocessing.py  shift_detection.py  sync_visualization.py  tools.py  utils.py
scprinter/chromvar/: functions.py
scprinter/docs/: conf.py  index.rst  install.md
scprinter/docs/_static/: versions.json
scprinter/docs/_static/css/: custom.css
scprinter/docs/_templates/: layout.html
scprinter/docs/_templates/autosummary/: class.rst
scprinter/docs/reference/: buencolors.rst  chromvar.rst  datasets.rst  dorc.rst  index.rst  io.rst  motifs.rst  peak.rst  plotting.rst  preprocessing.rst  seq.rst  tools.rst  utils.rst
scprinter/docs/tutorials/: index.rst
scprinter/seq/: Baseline_Modules.py  Functions.py  Models.py  Modules.py  __init__.py  attribution_helper.py  attribution_wrapper.py  attributions.py  captum_deeplift.py  dataloader.py  ema.py  ism.py  minimum_footprint.py  scdataloader.py  shap_deeplift.py  shap_expct_grad.py  template.JSON  train.py  visualization_helper.py
scprinter/seq/interpretation/: __init__.py  attribution_helper.py  attribution_wrapper.py  attributions.py  delta_effects.py  modisco_report.py  shap_deeplift.py  shap_expct_grad.py
scprinter/seq/scripts/: evaluation_model.py  generate_TFBS_bigwig.py  modisco_custom.py  motif_delta_effects.py  seq2print_lora_slice_train.py  seq2print_lora_train.py
